[gd_scene load_steps=33 format=3 uid="uid://d2dqeu2i1mjuv"]

[ext_resource type="Script" path="res://scripts/skin_selector.gd" id="1_vjtsq"]
[ext_resource type="Texture2D" uid="uid://bvmwncpj846br" path="res://assets/paddles/paddle.png" id="2_tlgih"]
[ext_resource type="Texture2D" uid="uid://cqvqfw5cv4btw" path="res://assets/paddles/paddle_e.png" id="3_2e8rk"]
[ext_resource type="Texture2D" uid="uid://db51ix2ooxq61" path="res://assets/paddles/paddle_m.png" id="4_nkwar"]
[ext_resource type="Texture2D" uid="uid://cjbiuvquk0b6u" path="res://assets/paddles/paddle_h.png" id="5_thpmg"]
[ext_resource type="Texture2D" uid="uid://ckr6jxakhvebs" path="res://assets/paddles/paddle_water.png" id="6_q2qqb"]
[ext_resource type="ButtonGroup" uid="uid://b7c6xl3tetsd2" path="res://resources/difficulty_buttons.tres" id="6_ylim5"]
[ext_resource type="Texture2D" uid="uid://btllm2nyh3ywx" path="res://assets/paddles/paddle_wood.png" id="7_d28bu"]
[ext_resource type="Texture2D" uid="uid://b5x15dl47ghnf" path="res://assets/paddles/paddle_poison.png" id="8_ynxqv"]
[ext_resource type="Texture2D" uid="uid://d2l4pt1wr1nxs" path="res://assets/paddles/paddle_princess.png" id="9_vdbtl"]
[ext_resource type="Texture2D" uid="uid://y5xtpkdb2pyr" path="res://assets/paddles/paddle_cloud.png" id="10_vv7gy"]
[ext_resource type="Texture2D" uid="uid://dverssnw1foaa" path="res://assets/paddles/paddle_fire.png" id="11_l1nu5"]
[ext_resource type="Texture2D" uid="uid://b6qecw6srssie" path="res://assets/paddles/paddle_wizard.png" id="12_6v77s"]
[ext_resource type="Texture2D" uid="uid://kcj2tkpfgvcs" path="res://assets/paddles/paddle_snakes.png" id="13_ae8gw"]
[ext_resource type="Texture2D" uid="uid://ca0lh044cxn8a" path="res://assets/paddles/paddle_demon.png" id="14_cmo3u"]
[ext_resource type="Texture2D" uid="uid://bmq4abksjk8ui" path="res://assets/paddles/paddle_bone.png" id="15_oqfqg"]
[ext_resource type="Texture2D" uid="uid://b048y08tp3ofg" path="res://assets/paddles/paddle_money.png" id="16_muwq5"]
[ext_resource type="Texture2D" uid="uid://bvetpl4lxfw3n" path="res://assets/paddles/paddle_soda.png" id="17_4v3na"]
[ext_resource type="Texture2D" uid="uid://bje1feubyk4if" path="res://assets/paddles/paddle_sol.png" id="18_d0laf"]
[ext_resource type="Texture2D" uid="uid://b4uw1fddo454" path="res://assets/paddles/paddle_king.png" id="19_yf2e0"]
[ext_resource type="FontFile" uid="uid://crpfiq20c1khc" path="res://assets/fonts/PixeloidSansBold-PKnYd.ttf" id="20_mepys"]
[ext_resource type="Texture2D" uid="uid://bimf65m0nekf5" path="res://assets/difficulties/easy.png" id="22_qti4q"]
[ext_resource type="Texture2D" uid="uid://px7uf6mlpxwy" path="res://assets/difficulties/medium.png" id="23_enl2v"]
[ext_resource type="Texture2D" uid="uid://boxlncp5cuq7d" path="res://assets/difficulties/hard.png" id="24_3i47u"]
[ext_resource type="Texture2D" uid="uid://bgxw52jxxmr24" path="res://assets/icons/left.png" id="25_a8ap3"]
[ext_resource type="Texture2D" uid="uid://csyji8dmai531" path="res://assets/icons/right.png" id="26_gtgd8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ltua"]
bg_color = Color(0.219608, 0.219608, 0.219608, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1epg1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wewpa"]
bg_color = Color(0.219501, 0.219501, 0.219501, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_srqvy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2e3wc"]
bg_color = Color(0.219608, 0.219608, 0.219608, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lmcfs"]

[node name="SkinSelector" type="CanvasLayer"]
script = ExtResource("1_vjtsq")
textures = Array[Texture2D]([ExtResource("2_tlgih"), ExtResource("3_2e8rk"), ExtResource("4_nkwar"), ExtResource("5_thpmg"), ExtResource("6_q2qqb"), ExtResource("7_d28bu"), ExtResource("8_ynxqv"), ExtResource("9_vdbtl"), ExtResource("10_vv7gy"), ExtResource("11_l1nu5"), ExtResource("12_6v77s"), ExtResource("13_ae8gw"), ExtResource("14_cmo3u"), ExtResource("15_oqfqg"), ExtResource("16_muwq5"), ExtResource("17_4v3na"), ExtResource("18_d0laf"), ExtResource("19_yf2e0")])

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.5
offset_top = -30.0
offset_right = 66.5
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("20_mepys")
theme_override_font_sizes/font_size = 32
text = "START"

[node name="Difficulties" type="HBoxContainer" parent="."]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 90.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80
alignment = 1

[node name="Easy" type="Button" parent="Difficulties"]
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_2ltua")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1epg1")
toggle_mode = true
button_pressed = true
button_group = ExtResource("6_ylim5")
icon = ExtResource("22_qti4q")
icon_alignment = 1

[node name="Medium" type="Button" parent="Difficulties"]
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_wewpa")
theme_override_styles/focus = SubResource("StyleBoxEmpty_srqvy")
toggle_mode = true
button_group = ExtResource("6_ylim5")
icon = ExtResource("23_enl2v")
icon_alignment = 1

[node name="Hard" type="Button" parent="Difficulties"]
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxFlat_2e3wc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lmcfs")
toggle_mode = true
button_group = ExtResource("6_ylim5")
icon = ExtResource("24_3i47u")
icon_alignment = 1

[node name="DifficultiesTexts" type="HBoxContainer" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -191.5
offset_top = 290.0
offset_right = 191.5
offset_bottom = 330.0
grow_horizontal = 2
theme_override_constants/separation = 90
alignment = 1

[node name="EasyText" type="Label" parent="DifficultiesTexts"]
layout_mode = 2
theme_override_fonts/font = ExtResource("20_mepys")
theme_override_font_sizes/font_size = 16
text = "Easy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MediumText" type="Label" parent="DifficultiesTexts"]
layout_mode = 2
theme_override_fonts/font = ExtResource("20_mepys")
theme_override_font_sizes/font_size = 16
text = "Medium"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HardText" type="Label" parent="DifficultiesTexts"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("20_mepys")
theme_override_font_sizes/font_size = 16
text = "Hard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkinSelect" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -170.0
offset_right = 176.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="P1Text" type="Label" parent="SkinSelect"]
layout_mode = 2
theme_override_fonts/font = ExtResource("20_mepys")
theme_override_font_sizes/font_size = 32
text = "P1
W/S"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Left" type="Button" parent="SkinSelect"]
layout_mode = 2
icon = ExtResource("25_a8ap3")
icon_alignment = 1

[node name="TextureRect" type="TextureRect" parent="SkinSelect"]
layout_mode = 2
texture = ExtResource("2_tlgih")

[node name="Right" type="Button" parent="SkinSelect"]
layout_mode = 2
icon = ExtResource("26_gtgd8")
icon_alignment = 1

[node name="SkinSelect2" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = 90.0
offset_right = 176.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="P2Text" type="Label" parent="SkinSelect2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("20_mepys")
theme_override_font_sizes/font_size = 32
text = "P2
↑/↓"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Left2" type="Button" parent="SkinSelect2"]
layout_mode = 2
icon = ExtResource("25_a8ap3")
icon_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="SkinSelect2"]
layout_mode = 2
texture = ExtResource("2_tlgih")

[node name="Right2" type="Button" parent="SkinSelect2"]
layout_mode = 2
icon = ExtResource("26_gtgd8")
icon_alignment = 1

[connection signal="button_down" from="StartButton" to="." method="finish"]
[connection signal="toggled" from="Difficulties/Easy" to="." method="_on_easy_toggled"]
[connection signal="toggled" from="Difficulties/Medium" to="." method="_on_medium_toggled"]
[connection signal="toggled" from="Difficulties/Hard" to="." method="_on_hard_toggled"]
[connection signal="button_down" from="SkinSelect/Left" to="." method="_on_left_button_down"]
[connection signal="button_down" from="SkinSelect/Right" to="." method="_on_right_button_down"]
[connection signal="button_down" from="SkinSelect2/Left2" to="." method="_on_left_2_button_down"]
[connection signal="button_down" from="SkinSelect2/Right2" to="." method="_on_right_2_button_down"]
